{
    "name": "InputController",
    "maps": [
        {
            "name": "General",
            "id": "9f137a1f-9f52-409d-8599-e2d87327daaf",
            "actions": [
                {
                    "name": "mousePosition",
                    "type": "Value",
                    "id": "540d7d35-f3c5-4bcf-af70-8ba47dc64e5b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cb1fd542-54ec-43f1-961f-da362d1d770a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UnitSelection",
            "id": "108d60b0-efcf-4856-990e-52926ad4f729",
            "actions": [
                {
                    "name": "select",
                    "type": "Button",
                    "id": "e434f528-6276-4366-a95f-e24d186efaee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "add",
                    "type": "Button",
                    "id": "3b2c3d53-0e48-4835-96db-d3dfee14fec0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "remove",
                    "type": "Button",
                    "id": "434b7536-3a6f-473b-9805-3190c129a3bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3a7e0681-dabe-4cbd-816c-b4ea014599ec",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(pressPoint=0.01,behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c60450f2-f20d-4cd7-849f-83eea5597201",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "add",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a4e6445-cd69-4ce7-ae5a-29de79f163aa",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "remove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MovementSelection",
            "id": "b587f8ae-80d1-4487-b90f-99d6968a2c7e",
            "actions": [
                {
                    "name": "placePoint",
                    "type": "Button",
                    "id": "1242725f-34e3-49ed-869f-aed9fa9088ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cancel",
                    "type": "Button",
                    "id": "4c40d480-7ef7-4b1a-a5ea-af888e19094d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "46a1de04-9694-475f-9c73-7c47d73d4dbe",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(pressPoint=0.01)",
                    "processors": "",
                    "groups": "",
                    "action": "placePoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6e7cddc-cf6c-4eb9-8406-ed0aa751dc7e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "SlowTap(duration=0.3)",
                    "processors": "",
                    "groups": "",
                    "action": "placePoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e055893-2dd5-478e-94d6-91721afba45c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ActionWheelShortcuts",
            "id": "c3cad5f6-14c8-4f37-b3c5-978f3edda4b1",
            "actions": [
                {
                    "name": "moveInteract",
                    "type": "Button",
                    "id": "71abfbbf-4b2b-4343-9d88-295b42db610e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "patrol",
                    "type": "Button",
                    "id": "87ef5019-5d7b-4fe8-95b2-f7dd22620585",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "scout",
                    "type": "Button",
                    "id": "140a6466-9607-4af5-a758-99867add7608",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "attack",
                    "type": "Button",
                    "id": "e70170e0-bab2-4fc1-8b0b-dfcfe1f345be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5df018ba-b089-4c81-97ae-df24421198bb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e418307-a6ee-4ff4-b1eb-aa7501d301a1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "patrol",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8999bde-60dc-4463-806b-92e15e775518",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "scout",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "555fa15a-327a-4410-b90f-b1f33e9ab27e",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}